# pdf2laser

./: .gitignore  AUTHORS  Makefile  Makefile.am  Makefile.dist  README  README.md  autogen.sh  configure.ac  cups-epilog.c  epilog.c  live-laser.c  make-halftone  make-serpenski  ta10.c
doc/: .gitignore  Makefile.am  pdf2laser.1  pdf2laser.preset.5  pdf2laser.preset.man
extra/: Makefile.am
extra/completion/: Makefile.am
extra/completion/bash/: Makefile.am  pdf2laser
extra/completion/zsh/: Makefile.am  _pdf2laser
extra/presets/: Makefile.am  acrylic-3mm  acrylic-6mm  acrylic-9.5mm  bamboo-2mm  basswood-3mm  birch-3mm  birch-5mm  cardboard-4mm  drywall-0.5in  leather-3mm  plywood-5mm  plywood-6mm
src/: Makefile.am  ini_file.c  ini_file.h  ini_lexer.l  ini_parser.y  optparse.h  pdf2laser.c  pdf2laser.h  pdf2laser_cli.c  pdf2laser_cli.h  pdf2laser_generator.c  pdf2laser_generator.h  pdf2laser_preset_file.c  pdf2laser_preset_file.h  pdf2laser_printer.c  pdf2laser_printer.h  pdf2laser_string_builder.c  pdf2laser_string_builder.h  pdf2laser_type.c  pdf2laser_type.h  pdf2laser_util.c  pdf2laser_util.h  pdf2laser_vector.c  pdf2laser_vector.h  pdf2laser_vector_list.c  pdf2laser_vector_list.h  type_point.c  type_point.h  type_preset.c  type_preset.h  type_preset_file.c  type_preset_file.h  type_print_job.c  type_print_job.h  type_raster.c  type_raster.h  type_vector.c  type_vector.h  type_vector_list.c  type_vector_list.h  (+2 more)
